# monsterVAE

./: .gitignore  README.md  model_train.ipynb  process_images.ipynb  pyproject.toml  requirements.txt
vae_models/: README.md  vanilla_vae.py
